Firefox: Fix unreadable default tab texts in Gtk+3 version-ed
Still Firefox uses GtkMenubar style-class to render tabs, non-sense...

--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -1502,6 +1502,7 @@ column-header.button.dnd { // for treeview-like derive widgets
   padding: 0;
   box-shadow: inset 0 -1px $borders_color;
   background-color: $inverted_dark_color;
+  color: $inverted_secondary_fg_color; // FIXME: Gtk+3 firefox needs this!
 
   & > .menuitem {
     padding: 0.4em 0.6em;
