--- a/gtk-3.0/gtk-dark.css
+++ b/gtk-3.0/gtk-dark.css
@@ -1586,7 +1586,8 @@ column-header.button.dnd, column-header .button.dnd {
   -GtkWidget-window-dragging: true;
   padding: 0;
   box-shadow: inset 0 -1px rgba(0, 0, 0, 0.09);
-  background-color: #2a373e; }
+  background-color: #2a373e;
+  color: rgba(236, 239, 241, 0.75); }
   .menubar > .menuitem {
     padding: 0.4em 0.6em;
     color: rgba(236, 239, 241, 0.75); }
